For scratch model added tensorboard logs for train and test loss, trained for 5 epochs.

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -870,6 +870,7 @@
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torch import sigmoid\n",
     "\n",
     "# NCLASSES = 269 - 151\n",
     "NCLASSES = 133\n",
@@ -912,7 +913,7 @@
     "        x = F.relu(self.fc2(x))\n",
     "        x = self.dropout(x)\n",
     "        x = self.fc3(x)\n",
-    "        x = F.sigmoid(x)\n",
+    "        x = sigmoid(x)\n",
     "        \n",
     "        return x\n",
     "\n",
@@ -969,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,6 +984,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorboardX import SummaryWriter\n",
+    "from pathlib import Path\n",
+    "\n",
+    "lr = optimizer_scratch.param_groups[0]['lr']\n",
+    "log_path = 'tensorboard_logs'\n",
+    "checkpoints_dir = 'checkpoints'\n",
+    "comment = \"scratch-\"\n",
+    "checkpoint_name = '{}model-batch-{}-lr-{}'.format(\n",
+    "                comment, batch_size, lr)\n",
+    "current_checkpoint_dir = Path(checkpoints_dir) / checkpoint_name\n",
+    "checkpoints_path = str(current_checkpoint_dir / '{}.pt'.format(checkpoint_name))\n",
+    "Path(checkpoints_path).parent.mkdir(parents=True, exist_ok=True)  # create checkpoint folder\n",
+    "tensorboard_dir = str(Path(log_path) / checkpoint_name)\n",
+    "writer = SummaryWriter(tensorboard_dir)  # creating TensorBoard writer"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -993,7 +1016,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_checkpoint(checkpoint: dict, save_path: str, checkpoint_type: str = 'best'):\n",
+    "    checkpoint_type = checkpoint_type.replace(' ', '_')\n",
+    "    if len(checkpoint_type) != 0:\n",
+    "        if checkpoint_type[-1] != '-':\n",
+    "            checkpoint_type += '-'  # 'best' -> 'best-' OR 'epoch_10' -> 'epoch_10-'\n",
+    "\n",
+    "    save_path = str(Path(save_path).parent / '{}{}'.format(checkpoint_type, Path(save_path).name))\n",
+    "\n",
+    "    torch.save(checkpoint, save_path)  # save checkpoint\n",
+    "    print(\"SUCCESSFULLY SAVED '{}' checkpoint to: {}\".format(checkpoint_type, save_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -1002,56 +1043,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train. Epoch 1: 100%|██████████| 209/209 [01:01<00:00,  3.39batch/s, loss=3.27e+4]\n",
-      "Valid. Epoch 1: 100%|██████████| 27/27 [00:06<00:00,  3.99batch/s, loss=4.09e+3]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1 \tTraining Loss: 4.890022 \tValidation Loss: 4.889282\n",
-      "Epoch 1: Upgrate of model quality: (inf)->(4.88928)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Train. Epoch 2: 100%|██████████| 209/209 [01:03<00:00,  3.30batch/s, loss=3.27e+4]\n",
-      "Valid. Epoch 2: 100%|██████████| 27/27 [00:07<00:00,  3.71batch/s, loss=4.09e+3]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 2 \tTraining Loss: 4.888964 \tValidation Loss: 4.887660\n",
-      "Epoch 2: Upgrate of model quality: (4.88928)->(4.88766)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Train. Epoch 3: 100%|██████████| 209/209 [01:01<00:00,  3.39batch/s, loss=3.26e+4]\n",
-      "Valid. Epoch 3: 100%|██████████| 27/27 [00:06<00:00,  4.02batch/s, loss=4.04e+3]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 3 \tTraining Loss: 4.874324 \tValidation Loss: 4.837204\n",
-      "Epoch 3: Upgrate of model quality: (4.88766)->(4.83720)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Train. Epoch 4: 100%|██████████| 209/209 [01:02<00:00,  3.33batch/s, loss=3.23e+4]\n",
-      "Valid. Epoch 4: 100%|██████████| 27/27 [00:06<00:00,  3.90batch/s, loss=4.01e+3]\n",
+      "Train. Epoch 1:   0%|          | 0/209 [00:00<?, ?batch/s]/home/mike/.virtualenvs/env_p37_ds/lib/python3.7/site-packages/torch/nn/functional.py:1639: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
+      "Train. Epoch 1: 100%|██████████| 209/209 [01:03<00:00,  3.31batch/s, loss=3.27e+4]\n",
+      "Valid. Epoch 1: 100%|██████████| 27/27 [00:06<00:00,  3.92batch/s, loss=4.09e+3]\n",
       "  0%|          | 0/209 [00:00<?, ?batch/s]"
      ]
     },
@@ -1059,24 +1054,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4 \tTraining Loss: 4.829473 \tValidation Loss: 4.793967\n",
-      "Epoch 4: Upgrate of model quality: (4.83720)->(4.79397)\n"
+      "Epoch: 1 \tTraining Loss: 4.890127 \tValidation Loss: 4.889468\n",
+      "Epoch 1: Upgrate of model quality: (inf)->(4.88947)\n",
+      "SUCCESSFULLY SAVED 'best-' checkpoint to: checkpoints/scratch-model-batch-32-lr-0.1/best-scratch-model-batch-32-lr-0.1.pt\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train. Epoch 5: 100%|██████████| 209/209 [01:01<00:00,  3.40batch/s, loss=3.19e+4]\n",
-      "Valid. Epoch 5: 100%|██████████| 27/27 [00:06<00:00,  3.90batch/s, loss=3.96e+3]\n"
+      "Train. Epoch 2: 100%|██████████| 209/209 [01:01<00:00,  3.38batch/s, loss=3.27e+4]\n",
+      "Valid. Epoch 2: 100%|██████████| 27/27 [00:06<00:00,  4.00batch/s, loss=4.09e+3]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5 \tTraining Loss: 4.781386 \tValidation Loss: 4.735284\n",
-      "Epoch 5: Upgrate of model quality: (4.79397)->(4.73528)\n"
+      "Epoch: 2 \tTraining Loss: 4.889287 \tValidation Loss: 4.888405\n",
+      "Epoch 2: Upgrate of model quality: (4.88947)->(4.88840)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/209 [00:00<?, ?batch/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESSFULLY SAVED 'best-' checkpoint to: checkpoints/scratch-model-batch-32-lr-0.1/best-scratch-model-batch-32-lr-0.1.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train. Epoch 3: 100%|██████████| 209/209 [01:02<00:00,  3.36batch/s, loss=3.27e+4]\n",
+      "Valid. Epoch 3: 100%|██████████| 27/27 [00:06<00:00,  4.01batch/s, loss=4.08e+3]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 3 \tTraining Loss: 4.888159 \tValidation Loss: 4.886166\n",
+      "Epoch 3: Upgrate of model quality: (4.88840)->(4.88617)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/209 [00:00<?, ?batch/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESSFULLY SAVED 'best-' checkpoint to: checkpoints/scratch-model-batch-32-lr-0.1/best-scratch-model-batch-32-lr-0.1.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train. Epoch 4: 100%|██████████| 209/209 [01:01<00:00,  3.40batch/s, loss=3.26e+4]\n",
+      "Valid. Epoch 4: 100%|██████████| 27/27 [00:06<00:00,  3.98batch/s, loss=4.05e+3]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 4 \tTraining Loss: 4.874568 \tValidation Loss: 4.848841\n",
+      "Epoch 4: Upgrate of model quality: (4.88617)->(4.84884)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/209 [00:00<?, ?batch/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESSFULLY SAVED 'best-' checkpoint to: checkpoints/scratch-model-batch-32-lr-0.1/best-scratch-model-batch-32-lr-0.1.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train. Epoch 5: 100%|██████████| 209/209 [01:02<00:00,  3.33batch/s, loss=3.24e+4]\n",
+      "Valid. Epoch 5: 100%|██████████| 27/27 [00:06<00:00,  3.91batch/s, loss=4.02e+3]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 5 \tTraining Loss: 4.844896 \tValidation Loss: 4.811070\n",
+      "Epoch 5: Upgrate of model quality: (4.84884)->(4.81107)\n",
+      "SUCCESSFULLY SAVED 'best-' checkpoint to: checkpoints/scratch-model-batch-32-lr-0.1/best-scratch-model-batch-32-lr-0.1.pt\n"
      ]
     },
     {
@@ -1085,7 +1175,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,6 +1194,10 @@
     "        # initialize variables to monitor training and validation loss\n",
     "        train_loss = 0.0\n",
     "        valid_loss = 0.0\n",
+    "        \n",
+    "        if writer is not None:\n",
+    "            writer.add_scalar('Learning Rate', lr, epoch)\n",
+    "        \n",
     "        \n",
     "        ###################\n",
     "        # train the model #\n",
@@ -1151,6 +1245,9 @@
     "        train_loss /= len(loaders['train'].sampler)\n",
     "        valid_loss /= len(loaders['valid'].sampler)\n",
     "    \n",
+    "        if writer is not None:\n",
+    "            writer.add_scalar('{}/TrainLoss'.format(\"train\"), train_loss, epoch)\n",
+    "            writer.add_scalar('{}/ValidLoss'.format(\"val\"), valid_loss, epoch)\n",
     "            \n",
     "        # print training/validation statistics \n",
     "        print('Epoch: {} \\tTraining Loss: {:.6f} \\tValidation Loss: {:.6f}'.format(\n",
@@ -1162,7 +1259,12 @@
     "        ## TODO: save the model if validation loss has decreased\n",
     "        if valid_loss < valid_loss_min:\n",
     "            print(\"Epoch {}: Upgrate of model quality: ({:.5f})->({:.5f})\".format(epoch, valid_loss_min, valid_loss))\n",
-    "            torch.save(model_scratch.state_dict(), 'model_scratch.pt')\n",
+    "            \n",
+    "#             save_checkpoint(checkpoint=checkpoint, save_path=checkpoints_path_dict[set_name],\n",
+    "#                                     checkpoint_type='best')\n",
+    "            save_checkpoint(checkpoint=model_scratch.state_dict(), save_path=checkpoints_path, \n",
+    "                           checkpoint_type='best')\n",
+    "#             torch.save(model_scratch.state_dict(), 'model_scratch.pt')\n",
     "            valid_loss_min = valid_loss\n",
     "            \n",
     "    # return trained model\n",
