--- a/01_classifier_scratch.ipynb
+++ b/01_classifier_scratch.ipynb
@@ -152,11 +152,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Optional: calculate mean and std of dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.4864, 0.4560, 0.3918])\n",
+      "length of dataset: Dataset ImageFolder\n",
+      "    Number of datapoints: 6680\n",
+      "    Root location: data/dogImages/train/\n",
+      "    StandardTransform\n",
+      "Transform: Compose(\n",
+      "               Resize(size=256, interpolation=PIL.Image.BILINEAR)\n",
+      "               CenterCrop(size=(224, 224))\n",
+      "               ToTensor()\n",
+      "           )\n",
+      "length of sampler: <torch.utils.data.sampler.SequentialSampler object at 0x7fe45ee7eb70>\n",
+      "tensor([0.2602, 0.2536, 0.2562])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import ImageFile\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
+    "preprocess = transforms.Compose([\n",
+    "   transforms.Resize(256),\n",
+    "   transforms.CenterCrop(224),\n",
+    "   transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "dataset_train = datasets.ImageFolder(\"data/dogImages/train/\", transform=preprocess)\n",
+    "\n",
+    "loader = torch.utils.data.DataLoader(dataset_train,\n",
+    "                         batch_size=10,\n",
+    "                         num_workers=0,\n",
+    "                         shuffle=False)\n",
+    "\n",
+    "mean = 0.0\n",
+    "for images, _ in loader:\n",
+    "    batch_samples = images.size(0) \n",
+    "    images = images.view(batch_samples, images.size(1), -1)\n",
+    "    mean += images.mean(2).sum(0)\n",
+    "mean = mean / len(loader.dataset)\n",
+    "print(mean)\n",
+    "\n",
+    "print(\"length of dataset: {}\".format(loader.dataset))\n",
+    "print(\"length of sampler: {}\".format(loader.sampler))\n",
+    "\n",
+    "var = 0.0\n",
+    "for images, _ in loader:\n",
+    "    batch_samples = images.size(0)\n",
+    "    images = images.view(batch_samples, images.size(1), -1)\n",
+    "    var += ((images - mean.unsqueeze(1))**2).sum([0,2])\n",
+    "std = torch.sqrt(var / (len(loader.dataset)*224*224))\n",
+    "print(std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Basic CNN implementation\n",
     "\n",
     "Basic CNN model based on AlexNet architecture [paper](https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf) with some simplifications:\n",
     "- not used `Local Response Normalization`\n",
-    "- using single GPU instead of how in paper\n",
+    "- using single GPU instead of how in paper (two GPUs)\n",
     "\n",
     "---\n",
     "Here, the vizualization of model architecture:"
