--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -93,7 +93,7 @@
     "Results:\n",
     "* best epoch: 40\n",
     "* test loss: 4.56\n",
-    "* test accuracy: 3% (28/836)\n",
+    "* test accuracy: 3.35% (28/836)\n",
     "* train time (minutes): 28.1"
    ]
   },
@@ -106,12 +106,13 @@
     "\n",
     "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Differences from parent experiment: batch size: 32 -> 64\n",
+    "Differences from parent experiment: \n",
+    "* batch size: 32 -> 64\n",
     "\n",
     "Results:\n",
     "* best epoch: 35\n",
     "* test loss: 4.646664\n",
-    "* test accuracy: 1% (15/836)\n",
+    "* test accuracy: 1.79% (15/836)\n",
     "* train time (minutes): 24.83"
    ]
   },
@@ -122,14 +123,15 @@
     "<a id='exp3'></a>\n",
     "## Experiment 3\n",
     "\n",
-    "Parent experiment: [exp 2](#exp2)\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Differences from parent experiment: batch size: 64 -> 128\n",
+    "Differences from parent experiment: \n",
+    "* batch size: 32 -> 128\n",
     "\n",
     "Results:\n",
     "* best epoch: 38\n",
     "* test loss: 4.660923\n",
-    "* test accuracy: 2% (19/836)\n",
+    "* test accuracy: 2.27% (19/836)\n",
     "* train time (minutes): 15.72"
    ]
   },
@@ -140,14 +142,15 @@
     "<a id='exp4'></a>\n",
     "## Experiment 4\n",
     "\n",
-    "Parent experiment: [exp 3](#exp3)\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Differences from parent experiment: batch size: 128 -> 16\n",
+    "Differences from parent experiment: \n",
+    "* batch size: 32 -> 16\n",
     "\n",
     "Results:\n",
     "* best epoch: 18\n",
     "* test loss: 4.598885\n",
-    "* test accuracy: 2% (18/836)\n",
+    "* test accuracy: 2.15% (18/836)\n",
     "* train time (minutes): 8.03"
    ]
   },
@@ -158,15 +161,15 @@
     "<a id='exp5'></a>\n",
     "## Experiment 5\n",
     "\n",
-    "Parent experiment: [exp 3](#exp3)\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Differences from parent experiment: batch size: 128 -> 16\n",
+    "Differences from parent experiment: optimizer: SGD -> Adam\n",
     "\n",
     "Results:\n",
-    "* best epoch: 18\n",
-    "* test loss: 4.598885\n",
-    "* test accuracy: 2% (18/836)\n",
-    "* train time (minutes): 8.03"
+    "* best epoch: 7\n",
+    "* test loss: 4.907243\n",
+    "* test accuracy: 1.20% (10/836)\n",
+    "* train time (minutes): 4.65"
    ]
   },
   {
@@ -176,9 +179,17 @@
     "<a id='exp6'></a>\n",
     "## Experiment 6\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* optimizer: SGD -> Adam\n",
+    "* lr: 0.01 -> 0.00001\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 61\n",
+    "* test loss: 4.586305\n",
+    "* test accuracy: 3.71% (31/836)\n",
+    "* train time (minutes): 41.85"
    ]
   },
   {
@@ -188,9 +199,18 @@
     "<a id='exp7'></a>\n",
     "## Experiment 7\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* optimizer: SGD -> Adam\n",
+    "* lr: 0.01 -> 0.00001\n",
+    "* batch size: 32 -> 256\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 65\n",
+    "* test loss: 4.668120\n",
+    "* test accuracy: 3.35% (28/836)\n",
+    "* train time (minutes): 28.38"
    ]
   },
   {
@@ -200,9 +220,18 @@
     "<a id='exp8'></a>\n",
     "## Experiment 8\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* optimizer: SGD -> Adam\n",
+    "* batch size: 32 -> 256\n",
+    "* lr: 0.00001 -> 0.001\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 57\n",
+    "* test loss: 4.890260\n",
+    "* test accuracy: 0.72% (6/836)\n",
+    "* train time (minutes): 24.61"
    ]
   },
   {
@@ -212,9 +241,17 @@
     "<a id='exp9'></a>\n",
     "## Experiment 9\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* batch size: 32 -> 256\n",
+    "* lr: 0.01 -> 0.1\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 65\n",
+    "* test loss: 4.598946\n",
+    "* test accuracy: 3.11% (26/836)\n",
+    "* train time (minutes): 27.72"
    ]
   },
   {
@@ -224,9 +261,16 @@
     "<a id='exp10'></a>\n",
     "## Experiment 10\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 41\n",
+    "* test loss: 4.554648\n",
+    "* test accuracy: 3.83% (32/836)\n",
+    "* train time (minutes): 27.55"
    ]
   },
   {
