--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -280,9 +280,17 @@
     "<a id='exp11'></a>\n",
     "## Experiment 11\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 49\n",
+    "* test loss: 4.550658\n",
+    "* test accuracy: 4.31% (36/836)\n",
+    "* train time (minutes): 18.43"
    ]
   },
   {
@@ -292,9 +300,18 @@
     "<a id='exp12'></a>\n",
     "## Experiment 12\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 98\n",
+    "* test loss: 4.404118\n",
+    "* test accuracy: 6.34% (53/836)\n",
+    "* train time (minutes): 35.08"
    ]
   },
   {
@@ -304,9 +321,19 @@
     "<a id='exp13'></a>\n",
     "## Experiment 13\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* model: Base -> AlexNet\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 85\n",
+    "* test loss: 1.574913\n",
+    "* test accuracy: 62.44% (522/836)\n",
+    "* train time (minutes): 39.45"
    ]
   },
   {
@@ -316,9 +343,18 @@
     "<a id='exp14'></a>\n",
     "## Experiment 14\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* model: Base -> AlexNet\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 17\n",
+    "* test loss: 3.64\n",
+    "* test accuracy: 13.88% (116/836)\n",
+    "* train time (minutes): 9.15"
    ]
   },
   {
@@ -328,9 +364,20 @@
     "<a id='exp15'></a>\n",
     "## Experiment 15\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> AlexNet\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 17\n",
+    "* test loss: 3.64\n",
+    "* test accuracy: 13.88% (116/836)\n",
+    "* train time (minutes): 9.15"
    ]
   },
   {
