--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -387,9 +387,19 @@
     "<a id='exp16'></a>\n",
     "## Experiment 16\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 144\n",
+    "* test loss: 4.382009\n",
+    "* test accuracy: 7.89% (66/836)\n",
+    "* train time (minutes): 51.76"
    ]
   },
   {
@@ -399,9 +409,21 @@
     "<a id='exp17'></a>\n",
     "## Experiment 17\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> AlexNet \n",
+    "* use pretrained weights, unfreeze last FC layer\n",
+    "\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 42\n",
+    "* test loss: 1.062519\n",
+    "* test accuracy: 74.88% (626/836)\n",
+    "* train time (minutes): 17.32"
    ]
   },
   {
@@ -411,9 +433,7 @@
     "<a id='exp18'></a>\n",
     "## Experiment 18\n",
     "\n",
-    "Description:\n",
-    "\n",
-    "Results:"
+    "equal to [exp 17](#exp17)\n"
    ]
   },
   {
@@ -423,9 +443,21 @@
     "<a id='exp19'></a>\n",
     "## Experiment 19\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> AlexNet \n",
+    "* use pretrained weights, unfreeze last 2 FC layers\n",
+    "\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 53\n",
+    "* test loss: 1.061143\n",
+    "* test accuracy: 72.13% (603/836)\n",
+    "* train time (minutes): 22.88"
    ]
   },
   {
@@ -435,9 +467,21 @@
     "<a id='exp20'></a>\n",
     "## Experiment 20\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> AlexNet \n",
+    "* use pretrained weights, unfreeze last 3 FC layers\n",
+    "\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 42\n",
+    "* test loss: 1.062519\n",
+    "* test accuracy: 74.88% (626/836)\n",
+    "* train time (minutes): 18.58"
    ]
   },
   {
