Experiments description ended: (25/25)

--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -452,7 +452,6 @@
     "* model: Base -> AlexNet \n",
     "* use pretrained weights, unfreeze last 2 FC layers\n",
     "\n",
-    "\n",
     "Results:\n",
     "* best epoch: 53\n",
     "* test loss: 1.061143\n",
@@ -476,7 +475,6 @@
     "* model: Base -> AlexNet \n",
     "* use pretrained weights, unfreeze last 3 FC layers\n",
     "\n",
-    "\n",
     "Results:\n",
     "* best epoch: 42\n",
     "* test loss: 1.062519\n",
@@ -491,9 +489,20 @@
     "<a id='exp21'></a>\n",
     "## Experiment 21\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> vgg16 (from scratch)\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 110\n",
+    "* test loss: 0.992273\n",
+    "* test accuracy: 76.44% (639/836)\n",
+    "* train time (minutes): 248.18"
    ]
   },
   {
@@ -503,9 +512,20 @@
     "<a id='exp22'></a>\n",
     "## Experiment 22\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> vgg16 \n",
+    "* use pretrained weights, unfreeze last FC layer\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 1\n",
+    "* test loss: 2.082360\n",
+    "* test accuracy: 52.63% (440/836)\n",
+    "* train time (minutes): 2.36"
    ]
   },
   {
@@ -515,9 +535,20 @@
     "<a id='exp23'></a>\n",
     "## Experiment 23\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> vgg16 \n",
+    "* use pretrained weights, unfreeze last 2 FC layers\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 1\n",
+    "* test loss: 2.082360\n",
+    "* test accuracy: 52.63% (440/836)\n",
+    "* train time (minutes): 1.47"
    ]
   },
   {
@@ -527,9 +558,20 @@
     "<a id='exp24'></a>\n",
     "## Experiment 24\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> vgg16 \n",
+    "* use pretrained weights, unfreeze last 3 FC layers\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 1\n",
+    "* test loss: 2.082360\n",
+    "* test accuracy: 52.63% (440/836)\n",
+    "* train time (minutes): 2.0"
    ]
   },
   {
@@ -539,9 +581,20 @@
     "<a id='exp25'></a>\n",
     "## Experiment 25\n",
     "\n",
-    "Description:\n",
+    "Parent experiment: [exp 1](#exp1)\n",
     "\n",
-    "Results:"
+    "Differences from parent experiment: \n",
+    "* use mean and std for current train dataset\n",
+    "* add weight decay 0.0005\n",
+    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* add augmentation: Color Jitter\n",
+    "* model: Base -> Base_1 (from scratch)\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 124\n",
+    "* test loss: 4.401157\n",
+    "* test accuracy: 5.26% (44/836)\n",
+    "* train time (minutes): 47.38"
    ]
   }
  ],
