--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -10,34 +10,35 @@
     "\n",
     "In this notebook, results of the experiments of training and improving the neural network from scratch is presented. In this part 25 first experiments are described and results are provided.\n",
     "\n",
-    "The notebook is broken into separate steps. Feel free to use the links below to navigate the notebook.\n",
+    "In these 25 experinments two custom implementations of AlexNet were used, and two PyTorch's implementations were uses. Go to [models description](#models) for details.\n",
     "\n",
-    "* [Models](#models)\n",
-    "* [Experiment 1](#exp1): \n",
-    "* [Experiment 2](#exp2): \n",
-    "* [Experiment 3](#exp3): \n",
-    "* [Experiment 4](#exp4): \n",
-    "* [Experiment 5](#exp5): \n",
-    "* [Experiment 6](#exp6): \n",
-    "* [Experiment 7](#exp7): \n",
-    "* [Experiment 8](#exp8): \n",
-    "* [Experiment 9](#exp9): \n",
-    "* [Experiment 10](#exp10): \n",
-    "* [Experiment 11](#exp11): \n",
-    "* [Experiment 12](#exp12): \n",
-    "* [Experiment 13](#exp13): \n",
-    "* [Experiment 14](#exp14): \n",
-    "* [Experiment 15](#exp15): \n",
-    "* [Experiment 16](#exp16): \n",
-    "* [Experiment 17](#exp17): \n",
-    "* [Experiment 18](#exp18): \n",
-    "* [Experiment 19](#exp19): \n",
-    "* [Experiment 20](#exp20): \n",
-    "* [Experiment 21](#exp21): \n",
-    "* [Experiment 22](#exp22): \n",
-    "* [Experiment 23](#exp23): \n",
-    "* [Experiment 24](#exp24): \n",
-    "* [Experiment 25](#exp25): \n",
+    "Use the links below to navigate between experiments description:\n",
+    "\n",
+    "* [Experiment 1](#exp1): model `Base`\n",
+    "* [Experiment 2](#exp2): model `Base` \n",
+    "* [Experiment 3](#exp3): model `Base` \n",
+    "* [Experiment 4](#exp4): model `Base` \n",
+    "* [Experiment 5](#exp5): model `Base` \n",
+    "* [Experiment 6](#exp6): model `Base` \n",
+    "* [Experiment 7](#exp7): model `Base` \n",
+    "* [Experiment 8](#exp8): model `Base` \n",
+    "* [Experiment 9](#exp9): model `Base` \n",
+    "* [Experiment 10](#exp10): model `Base` \n",
+    "* [Experiment 11](#exp11): model `Base` \n",
+    "* [Experiment 12](#exp12): model `Base` \n",
+    "* [Experiment 13](#exp13): model `AlexNet` (from scratch)\n",
+    "* [Experiment 14](#exp14): model `AlexNet` (from scratch)\n",
+    "* [Experiment 15](#exp15): model `AlexNet` (from scratch), best result for this model from scratch\n",
+    "* [Experiment 16](#exp16): model `Base`, best result for this model\n",
+    "* [Experiment 17](#exp17): model `AlexNet` (transfer learning), best result for this model transfer learning\n",
+    "* [Experiment 18](#exp18): equal to experiment 17\n",
+    "* [Experiment 19](#exp19): model `AlexNet` (transfer learning)\n",
+    "* [Experiment 20](#exp20): model `AlexNet` (transfer learning), best result for this model transfer learning\n",
+    "* [Experiment 21](#exp21): model `vgg16` (from scratch), best result among all 25 experiments\n",
+    "* [Experiment 22](#exp22): model `vgg16` (transfer learning), fail to train\n",
+    "* [Experiment 23](#exp23): model `vgg16` (transfer learning), fail to train\n",
+    "* [Experiment 24](#exp24): model `vgg16` (transfer learning), fail to train\n",
+    "* [Experiment 25](#exp25): model `Base_1` (from scratch), best result for this model from scratch, but worse than model `Base`\n",
     "\n",
     "---"
    ]
@@ -49,20 +50,214 @@
     "<a id='models'></a>\n",
     "## Models\n",
     "\n",
-    "### TODO\n",
     "\n",
-    "* `Base`: AlexNet realization as in [original paper](https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf), but without Local Response Normalization\n",
-    "* `Base_1`: deeper AlexNet realization (more filters), without Local Response Normalization\n",
-    "* `AlexNet`: PyTorch's realization of AlexNet\n",
-    "* `vgg16`: PyTorch's realization of VGG16"
+    "1. `Base`: custom AlexNet realization as in [original paper](https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf), but without Local Response Normalization.\n",
+    "\n",
+    "Model architecture:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BasicCNN(\n",
+      "  (conv1): Conv2d(3, 48, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+      "  (conv2): Conv2d(48, 128, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "  (conv3): Conv2d(128, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (conv4): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (conv5): Conv2d(192, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (fc1): Linear(in_features=4608, out_features=2048, bias=True)\n",
+      "  (fc2): Linear(in_features=2048, out_features=2048, bias=True)\n",
+      "  (fc3): Linear(in_features=2048, out_features=133, bias=True)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from models.model_utils import init_model\n",
+    "model_base = init_model(\"Base\", 133, pretrained=False)\n",
+    "print(model_base)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fow all experiments, some parameters did'n chage:\n",
-    "* for SGD momentum 0.9 was used\n",
+    "2. `Base_1`: custom AlexNet realization, but more deeper convolution layers (more filters).\n",
+    "\n",
+    "Model architecture:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BasicCNN_v1(\n",
+      "  (conv1): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+      "  (conv2): Conv2d(64, 156, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "  (conv3): Conv2d(156, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (conv4): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (conv5): Conv2d(256, 192, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (pool): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (fc1): Linear(in_features=6912, out_features=4096, bias=True)\n",
+      "  (fc2): Linear(in_features=4096, out_features=2048, bias=True)\n",
+      "  (fc3): Linear(in_features=2048, out_features=133, bias=True)\n",
+      "  (dropout): Dropout(p=0.5, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_base_1 = init_model(\"Base_1\", 133, pretrained=False)\n",
+    "print(model_base_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. `AlexNet`: model from torchvision library\n",
+    "\n",
+    "Model architecture:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AlexNet(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+      "    (4): ReLU(inplace=True)\n",
+      "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (7): ReLU(inplace=True)\n",
+      "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (9): ReLU(inplace=True)\n",
+      "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace=True)\n",
+      "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(6, 6))\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Dropout(p=0.5, inplace=False)\n",
+      "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
+      "    (2): ReLU(inplace=True)\n",
+      "    (3): Dropout(p=0.5, inplace=False)\n",
+      "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (5): ReLU(inplace=True)\n",
+      "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.models as torch_models\n",
+    "model_alexnet = torch_models.alexnet()\n",
+    "print(model_alexnet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. `vgg16`: model VGG16 from torchvision library\n",
+    "\n",
+    "Model architecture:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace=True)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace=True)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace=True)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace=True)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace=True)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace=True)\n",
+      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (18): ReLU(inplace=True)\n",
+      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace=True)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace=True)\n",
+      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (25): ReLU(inplace=True)\n",
+      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (27): ReLU(inplace=True)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace=True)\n",
+      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Dropout(p=0.5, inplace=False)\n",
+      "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (4): ReLU(inplace=True)\n",
+      "    (5): Dropout(p=0.5, inplace=False)\n",
+      "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.models as torch_models\n",
+    "model_vgg16 = torch_models.vgg16()\n",
+    "print(model_vgg16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiments description\n",
+    "\n",
+    "Fow all experiments, some parameters did'n change:\n",
+    "* for SGD momentum value 0.9 was used\n",
     "* in Base and Base_1 for fully connected layers dropout=0.5 was used\n",
     "* a scheduler with following parameters in all experiments was used:\n",
     "  * scheduler patience = 3\n",
