Conclusions and future work
- conclusions from 1-25 experiments were added
- formulated directions for future work

--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -40,6 +40,8 @@
     "* [Experiment 24](#exp24): model `vgg16` (transfer learning), fail to train\n",
     "* [Experiment 25](#exp25): model `Base_1` (from scratch), best result for this model from scratch, but worse than model `Base`\n",
     "\n",
+    "[Conclusions](#conclusions) are here.\n",
+    "\n",
     "---"
    ]
   },
@@ -790,6 +792,45 @@
     "* test loss: 4.401157\n",
     "* test accuracy: 5.26% (44/836)\n",
     "* train time (minutes): 47.38"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='conclusions'></a>\n",
+    "## CONCLUSIONS for series of experiments 1-25\n",
+    "\n",
+    "Which improvements have been made:\n",
+    "* For `Base` model:\n",
+    "  * optimizer SGD work faster than Adam and a little better. [exp 1](#exp1) vs [exp 6](#exp6)\n",
+    "  * if using Adam, it is better to start with small values of learning rate (0.00001). [exp 6](#exp6) vs [exp 5](#exp5) \n",
+    "  * it is better to calculate actual mean and std from train split than use imagenet values (for training model from scratch) [exp 10](#exp10) vs [exp 9](#exp9)\n",
+    "  * using weight decay 0.00005 get better result than not using. [exp 11](#exp11) vs [exp 10](#exp10)\n",
+    "  * using Horizontal Flip and Random Resized Crop augmentation reduce overfitting and get better result: [exp 12](#exp12) vs [exp 11](#exp11)\n",
+    "  * adding augmentations from ColorJitter get some enhancements: [exp 16](#exp16) vs [exp 12](#exp12)\n",
+    "* Using `AlexNet` (from torchvision) model get 10x better result than my custom `Base`, if train from scratch: [exp 13](#exp13) vs [exp 12](#exp12)\n",
+    "* Using transfer learning for `AlexNet` get some better result than train from scratch and ~5x time faster training: [exp 17](#exp17) vs [exp 15](#exp15)\n",
+    "* Using vgg16 from scratch get small better result than AlexNet transfer learning: [exp 21](#exp21) vs [exp 17](#exp17)\n",
+    "* but transfer learning for vgg failed [exp 22](#exp21), [exp 23](#exp23), [exp 24](#exp24). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Explore why vgg transfer learning failed\n",
+    "2. Explore why my custom AlexNet realization 10x worse than PyTorch (may be key in adaptive average pool?)\n",
+    "3. Check transfer learning with unfreezing convolution layers too (in these experiments fully connected layer were unfreezed only)\n",
+    "4. Try more state of the art models to train (from scratch and transfer learning)\n",
+    "5. Get 90% of test accuracy"
    ]
   }
  ],
