Remove deprecated notebook

--- a/experiments_part_1.ipynb
+++ b/experiments_part_1.ipynb
@@ -803,7 +803,7 @@
     "\n",
     "Which improvements have been made:\n",
     "* For `Base` model:\n",
-    "  * optimizer SGD work faster than Adam and a little better. [exp 1](#exp1) vs [exp 6](#exp6)\n",
+    "  * optimizer SGD works faster than Adam and a little better. [exp 1](#exp1) vs [exp 6](#exp6)\n",
     "  * if using Adam, it is better to start with small values of learning rate (0.00001). [exp 6](#exp6) vs [exp 5](#exp5) \n",
     "  * it is better to calculate actual mean and std from train split than use imagenet values (for training model from scratch) [exp 10](#exp10) vs [exp 9](#exp9)\n",
     "  * using weight decay 0.00005 get better result than not using. [exp 11](#exp11) vs [exp 10](#exp10)\n",
@@ -829,7 +829,7 @@
     "1. Explore why vgg transfer learning failed\n",
     "2. Explore why my custom AlexNet realization 10x worse than PyTorch (may be key in adaptive average pool?)\n",
     "3. Check transfer learning with unfreezing convolution layers too (in these experiments fully connected layer were unfreezed only)\n",
-    "4. Try more state of the art models to train (from scratch and transfer learning)\n",
+    "4. Try state of the art architectures to train (from scratch and transfer learning)\n",
     "5. Get 90% of test accuracy"
    ]
   }
