--- a/experiments_part_2.ipynb
+++ b/experiments_part_2.ipynb
@@ -372,7 +372,7 @@
     "\n",
     "Results:\n",
     "* best epoch: 1\n",
-    "* test loss: 4.8903\n",
+    "* test loss: 4.890350\n",
     "* test accuracy: 0.96% (8/836)\n",
     "* train time (minutes): 0.33"
    ]
@@ -391,7 +391,7 @@
     "\n",
     "Results:\n",
     "* best epoch: 6\n",
-    "* test loss: 5.0303\n",
+    "* test loss: 5.030281\n",
     "* test accuracy: 0.72% (6/836)\n",
     "* train time (minutes): 2.15"
    ]
@@ -410,7 +410,7 @@
     "\n",
     "Results:\n",
     "* best epoch: 122\n",
-    "* test loss: 4.3969\n",
+    "* test loss: 4.396873\n",
     "* test accuracy: 7.54% (63/836)\n",
     "* train time (minutes): 43.48"
    ]
@@ -429,7 +429,7 @@
     "\n",
     "Results:\n",
     "* best epoch: 77\n",
-    "* test loss: 4.4776\n",
+    "* test loss: 4.477621\n",
     "* test accuracy: 5.14% (43/836)\n",
     "* train time (minutes): 119.08"
    ]
@@ -449,7 +449,7 @@
     "\n",
     "Results:\n",
     "* best epoch: 17\n",
-    "* test loss: 3.4623\n",
+    "* test loss: 3.462288\n",
     "* test accuracy: 16.99% (142/836)\n",
     "* train time (minutes): 8.68"
    ]
@@ -458,95 +458,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp6'></a>\n",
-    "## Experiment 6\n",
+    "<a id='exp31'></a>\n",
+    "## Experiment 31\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 30](#exp30)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* optimizer: SGD -> Adam\n",
-    "* lr: 0.01 -> 0.00001\n",
+    "* ColorJitter: on -> off\n",
     "\n",
     "Results:\n",
-    "* best epoch: 61\n",
-    "* test loss: 4.586305\n",
-    "* test accuracy: 3.71% (31/836)\n",
-    "* train time (minutes): 41.85"
+    "* best epoch: 109\n",
+    "* test loss: 1.588668\n",
+    "* test accuracy: 61.24% (512/836)\n",
+    "* train time (minutes): 48.93"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp7'></a>\n",
-    "## Experiment 7\n",
+    "<a id='exp32'></a>\n",
+    "## Experiment 32\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 31](#exp1)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* optimizer: SGD -> Adam\n",
-    "* lr: 0.01 -> 0.00001\n",
-    "* batch size: 32 -> 256\n",
+    "* color jitter: off -> on\n",
     "\n",
     "Results:\n",
-    "* best epoch: 65\n",
-    "* test loss: 4.668120\n",
-    "* test accuracy: 3.35% (28/836)\n",
-    "* train time (minutes): 28.38"
+    "* best epoch: 123\n",
+    "* test loss: 1.315878\n",
+    "* test accuracy: 66.15% (553/836)\n",
+    "* train time (minutes): 192.85"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp8'></a>\n",
-    "## Experiment 8\n",
+    "<a id='exp33'></a>\n",
+    "## Experiment 33\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 32](#exp32)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* optimizer: SGD -> Adam\n",
-    "* batch size: 32 -> 256\n",
-    "* lr: 0.00001 -> 0.001\n",
+    "* model: Base_2 -> AlexNet\n",
     "\n",
     "Results:\n",
-    "* best epoch: 57\n",
-    "* test loss: 4.890260\n",
-    "* test accuracy: 0.72% (6/836)\n",
-    "* train time (minutes): 24.61"
+    "* best epoch: 165\n",
+    "* test loss: 1.382329\n",
+    "* test accuracy: 66.51% (556/836)\n",
+    "* train time (minutes): 262.42"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp9'></a>\n",
-    "## Experiment 9\n",
+    "<a id='exp34'></a>\n",
+    "## Experiment 34\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* batch size: 32 -> 256\n",
-    "* lr: 0.01 -> 0.1\n",
+    "* model: Base -> Base_fix\n",
     "\n",
     "Results:\n",
-    "* best epoch: 65\n",
-    "* test loss: 4.598946\n",
-    "* test accuracy: 3.11% (26/836)\n",
-    "* train time (minutes): 27.72"
+    "* best epoch: 145\n",
+    "* test loss: 1.287084\n",
+    "* test accuracy: 63.64% (532/836)\n",
+    "* train time (minutes): 223.72"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp10'></a>\n",
-    "## Experiment 10\n",
+    "<a id='exp35'></a>\n",
+    "## Experiment 35\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
+    "* model: \n",
     "\n",
     "Results:\n",
     "* best epoch: 41\n",
