Experiments 36-40 description added

--- a/experiments_part_2.ipynb
+++ b/experiments_part_2.ipynb
@@ -540,114 +540,106 @@
     "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* model: \n",
+    "* model: Base -> Base_1_fix\n",
     "\n",
     "Results:\n",
-    "* best epoch: 41\n",
-    "* test loss: 4.554648\n",
-    "* test accuracy: 3.83% (32/836)\n",
-    "* train time (minutes): 27.55"
+    "* best epoch: 137\n",
+    "* test loss: 1.334149\n",
+    "* test accuracy: 64.95% (543/836)\n",
+    "* train time (minutes): 214.98"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp11'></a>\n",
-    "## Experiment 11\n",
+    "<a id='exp36'></a>\n",
+    "## Experiment 36\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
+    "* model: Base -> vgg16\n",
     "\n",
     "Results:\n",
-    "* best epoch: 49\n",
-    "* test loss: 4.550658\n",
-    "* test accuracy: 4.31% (36/836)\n",
-    "* train time (minutes): 18.43"
+    "* best epoch: 99\n",
+    "* test loss: 0.943133\n",
+    "* test accuracy: 76.56% (640/836)\n",
+    "* train time (minutes): 324.48"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp12'></a>\n",
-    "## Experiment 12\n",
+    "<a id='exp37'></a>\n",
+    "## Experiment 37\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 36](#exp36)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* ColorJitter: on -> off\n",
     "\n",
     "Results:\n",
-    "* best epoch: 98\n",
-    "* test loss: 4.404118\n",
-    "* test accuracy: 6.34% (53/836)\n",
-    "* train time (minutes): 35.08"
+    "* best epoch: 105\n",
+    "* test loss: 0.903384\n",
+    "* test accuracy: 77.51% (648/836)\n",
+    "* train time (minutes): 238.15"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp13'></a>\n",
-    "## Experiment 13\n",
+    "<a id='exp38'></a>\n",
+    "## Experiment 38\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
+    "* pretrained: false -> true\n",
     "* model: Base -> AlexNet\n",
+    "* mean: 0.485, 0.456, 0.406\n",
+    "* std: 0.229, 0.224, 0.225\n",
+    "* number of unfreezed layers: 1\n",
     "\n",
     "Results:\n",
-    "* best epoch: 85\n",
-    "* test loss: 1.574913\n",
-    "* test accuracy: 62.44% (522/836)\n",
-    "* train time (minutes): 39.45"
+    "* best epoch: 75\n",
+    "* test loss: 1.022241\n",
+    "* test accuracy: 73.56% (615/836)\n",
+    "* train time (minutes): 223.25"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp14'></a>\n",
-    "## Experiment 14\n",
+    "<a id='exp39'></a>\n",
+    "## Experiment 39\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 38](#exp38)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* model: Base -> AlexNet\n",
+    "* number of unfreezed FC layers: 1 -> 2\n",
     "\n",
     "Results:\n",
-    "* best epoch: 17\n",
-    "* test loss: 3.64\n",
-    "* test accuracy: 13.88% (116/836)\n",
-    "* train time (minutes): 9.15"
+    "* best epoch: 81\n",
+    "* test loss: 0.990969\n",
+    "* test accuracy: 71.65% (599/836)\n",
+    "* train time (minutes): 241.1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp15'></a>\n",
-    "## Experiment 15\n",
+    "<a id='exp40'></a>\n",
+    "## Experiment 40\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 38](#exp38)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> AlexNet\n",
+    "* number of unfreezed FC layers: 1 -> 3\n",
     "\n",
     "Results:\n",
     "* best epoch: 17\n",
